<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelicula_detalle">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTituloPelicula"
        app:layout_constraintStart_toEndOf="@id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/scale_16"
        android:text="@string/titulo_pelicula_placeholder"
        android:textSize="@dimen/text_title_header"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcion_btn_volver"
        android:padding="15dp"
        android:layout_marginStart="@dimen/scale_16"
        android:layout_marginTop="@dimen/scale_16"
        android:src="@drawable/arrow_left"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/txtTituloPelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <ImageView
        android:id="@+id/img_pelicula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcion_fondo_pelicula"
        android:src="@drawable/ic_launcher_background"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="77dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/scale_16"
        app:layout_constraintTop_toBottomOf="@id/txtTituloPelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_detalle_pelicula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/scale_16"
        android:text="@string/btn_detalle_pelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_pelicula"
        app:layout_constraintWidth_percent="0.5"
        app:cornerRadius="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_detalle_comprar_pelicula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/scale_16"
        android:text="@string/btn_detalle_comprar_pelicula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_pelicula"
        app:layout_constraintWidth_percent="0.5"
        app:cornerRadius="0dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_detalle_pelicula_sinopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_detalle_pelicula"
        android:text="@string/subtitulo_sinopsis_pelicula"
        android:layout_margin="@dimen/scale_16"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_sinopsis_pelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_detalle_pelicula_sinopsis"
        android:text="@string/txt_sinopsis_pelicula"
        android:layout_margin="@dimen/scale_16"
        android:textSize="16sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_subtitulo_idioma_pelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_sinopsis_pelicula"
        android:text="@string/txt_subtitulo_idioma_pelicula"
        android:layout_margin="@dimen/scale_16"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_idioma_disponible_pelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitulo_idioma_pelicula"
        android:text="@string/txt_idioma_disponible"
        android:layout_margin="@dimen/scale_16"
        android:textSize="16sp"
        android:padding="6dp"
        android:background="@drawable/textview_border"

        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_calidad_subtitulo_pelicula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_idioma_disponible_pelicula"
        android:text="@string/txt_subtitulo_idioma_pelicula"
        android:layout_margin="@dimen/scale_16"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_tipos_pelicula_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_calidad_subtitulo_pelicula"
        android:text="@string/txt_tipos_pelicula_2d"
        android:paddingStart="@dimen/scale_16"
        android:paddingEnd="@dimen/scale_16"
        android:layout_margin="@dimen/scale_16"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        android:padding="6dp"
        android:background="@drawable/textview_border"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_tipos_pelicula_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/scale_16"
        android:layout_marginStart="192dp"
        android:layout_marginTop="52dp"
        android:paddingStart="@dimen/scale_16"
        android:paddingEnd="@dimen/scale_16"
        android:text="@string/txt_tipos_pelicula_regular"
        android:textSize="16sp"
        android:padding="6dp"
        android:background="@drawable/textview_border"
        app:layout_constraintStart_toEndOf="@id/txt_tipos_pelicula_1"
        app:layout_constraintTop_toBottomOf="@id/txt_calidad_subtitulo_pelicula" />

</androidx.constraintlayout.widget.ConstraintLayout>

