<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelicula_confirmar_compra">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_titulo_pelicula_entradas"
        app:layout_constraintStart_toEndOf="@id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/scale_16"
        android:text="@string/txt_titulo_pelicula_entradas"
        android:textSize="@dimen/text_title_header"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descripcion_btn_volver"
        android:padding="15dp"
        android:layout_marginStart="@dimen/scale_16"
        android:layout_marginTop="@dimen/scale_16"
        android:src="@drawable/arrow_left"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/txt_titulo_pelicula_entradas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_titulo_pelicula_butacas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_pelicula_placeholder"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_pelicula_entradas"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/scale_16"
        android:textSize="@dimen/text_subtitle"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ver_detalle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ver_detalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_titulo_pelicula_butacas"
        app:layout_constraintTop_toBottomOf="@+id/btn_volver" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_detalle"
        app:layout_constraintBottom_toTopOf="@id/txt_resumen_pelicula_compra"
        android:padding="@dimen/scale_16">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:src="@drawable/seat" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ticket_confirmation"
            android:alpha="0.5"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/wallet"
            android:alpha="1"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_resumen_pelicula_compra"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/scale_16"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title_header"
        android:textStyle="bold"
        android:text="@string/txt_resumen_pelicula_compra"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="336dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_subtitulo_pelicula_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_subtitulo_pelicula_confirmar"
        android:textSize="@dimen/text_subtitle"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="277dp"
        app:layout_constraintTop_toBottomOf="@id/txt_resumen_pelicula_compra"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/scale_16"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_pelicula_resumen_tipo_entrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pelicula_resumen_tipo_entrada"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="332dp"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitulo_pelicula_confirmar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/scale_16"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_pelicula_resumen_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pelicula_resumen_subtotal"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="388dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pelicula_resumen_tipo_entrada"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/scale_16"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_pelicula_resumen_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pelicula_resumen_total"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="438dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pelicula_resumen_subtotal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/scale_16"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirmar_compra_pelicula"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="413dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pelicula_resumen_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_cancelar"
        android:layout_marginTop="@dimen/scale_16"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar_compra_pelicula"
        tools:layout_editor_absoluteX="262dp"
        tools:layout_editor_absoluteY="413dp"
        app:layout_constraintTop_toBottomOf="@id/txt_pelicula_resumen_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_confirmar"
        android:layout_marginTop="@dimen/scale_16"
        />


</androidx.constraintlayout.widget.ConstraintLayout>